--- a/css/smart.css
+++ b/css/smart.css
@@ -52,33 +52,10 @@ h1{
 
 }
 /* landing  */
-.slide-from-left {
-  transform: translateX(-100%);
-  animation: slideFromLeft 2s ease-in-out forwards;
+.animate__backInLeft {
+  --animate-duration: 2s; /* Customize the duration here */
 }
 
-.slide-from-right {
-  transform: translateX(100%);
-  animation: slideFromRight 2s ease-in-out forwards;
-}
-
-@keyframes slideFromLeft {
-  from {
-      transform: translateX(-100%);
-  }
-  to {
-      transform: translateX(0);
-  }
-}
-
-@keyframes slideFromRight {
-  from {
-      transform: translateX(100%);
-  }
-  to {
-      transform: translateX(0);
-  }
-}
 
 .landing {
 
@@ -107,9 +84,6 @@ min-height: calc(100vh - 78px);
 
 
 /* function  */
-.features  {
-  background-color: #0a1c3a;
-}
 
 .cage {
   border: 2px white solid;
@@ -145,7 +119,30 @@ min-height: calc(100vh - 78px);
 h4 {
     color: darksalmon;
 }
-
+.cage:hover {
+  transform: translateY(-20px) ;
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+  -webkit-transform: translateY(-20px) ;
+  -moz-transform: translateY(-20px) ;
+  -ms-transform: translateY(-20px) ;
+  -o-transform: translateY(-20px) ;
+}
+.cage1:hover {
+  transform: translateY(-20px) translateX(20px);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+  -webkit-transform: translateY(-20px) translateX(20px);
+  -moz-transform: translateY(-20px) translateX(20px);
+  -ms-transform: translateY(-20px) translateX(20px);
+  -o-transform: translateY(-20px) translateX(20px);
+}
+.cage2:hover {
+  transform: translateY(-20px) translateX(20px);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+  -webkit-transform: translateY(-20px) translateX(-20px);
+  -moz-transform: translateY(-20px) translateX(-20px);
+  -ms-transform: translateY(-20px) translateX(-20px);
+  -o-transform: translateY(-20px) translateX(-20px);
+}
 /* Interface  */
 .view {
   background-color: #0a1c3a;
@@ -171,18 +168,12 @@ h4 {
 }
 
 /* price  */
-.price {
-  background-color: #0a1c3a;
-}
-
-
-
 
 .shadowww {
   font-size: 85px;
   opacity: 1.3;
   font-weight: 700;
-  text-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 8px 10px rgb(0, 0, 0);
   position: absolute;
   top: -110px;
   left: 0;
@@ -190,142 +181,229 @@ h4 {
   margin: auto;
   z-index: 0;
   overflow: hidden;
+  color: white;
+}
+.shadowww-2 {
+  font-size: 85px;
+  opacity: 1.3;
+  font-weight: 700;
+  text-shadow: 0 8px 10px #33C4FF;
+  position: absolute;
+  top: -110px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 0;
+  overflow: hidden;
+  color: black;
 }
 
 .title-shadowww{
 font-size: 45px;
     font-weight: 600;
-    color: #fff;
+    color: black;
     margin-bottom: 15px;
 }
 
-.price .card {
-  padding: 30px 16px;
-    background-color: #283753;
-    border-radius: 10px;
-    text-align: center;
-    position: relative;
-    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
-    transition: 0.3s;
-    z-index: 1;
-    margin: auto;
+@media (max-width: 767px) {
+  .shadowww-2 ,
+  .shadowww {
+    font-size: 50px;
+    top: -92px;
+  }
 }
 
 
 
-.price .card::before,
-.price .card::after {
-  content: "";
-  width: 0;
-  height: 50%;
-  background-color: #3e9133;
-  position: absolute;
-  z-index: -1;
-  transition: 0.3s;
-}
-.price .card::before {
-  left: 0;
-  top: 0;
-}
-.price .card::after {
-  right: 0;
-  bottom: 0;
-}
-.price .card:hover::before,
-.price .card:hover::after {
+.pricing {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 100%;
+  margin: 0 auto 3em;
 }
 
-.price .card.popular .label {
+.pricing-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  text-align: center;
+  flex: 0 1 330px;
+}
+
+.pricing-item .label {
   position: absolute;
   writing-mode: vertical-rl;
-  background-color: rgb(49, 202, 49);
+  background-color: red;
   color: white;
   font-weight: bold;
-  padding: 10px 4px 28px 23px;
+  padding: 13px 2px 12px 23px;
   font-size: 15px;
-  right: -9px;
-  width: 31px;
-  top: -26px;
+  right: 6px;
+  width: 27px;
+  top: -15px;
+  z-index: 1;
 }
 
-.price .card.popular .label::before {
-  content: "";
+
+.pricing-action {
+  color: inherit;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.pricing-action:focus {
+  outline: none;
+}
+
+.pricing-feature-list {
+  text-align: left;
+}
+
+.pricing-palden .pricing-item {
+  font-family: 'Open Sans', sans-serif;
+  cursor: default;
+  color: #84697c;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(46, 59, 125, 0.23);
+  border-radius: 20px 20px 10px 10px;
+  margin: 1em;
+}
+
+@media screen and (min-width: 66.25em) {
+  .pricing-palden .pricing-item {
+      margin: 1em -0.5em;
+  }
+  .pricing-palden .pricing__item--featured {
+      margin: 0;
+      z-index: 10;
+      box-shadow: 0 0 20px rgba(46, 59, 125, 0.23);
+  }
+}
+
+.pricing-palden .pricing-deco {
+  border-radius: 10px 10px 0 0;
+  background: linear-gradient(135deg,#4097f9,#0af0c7);
+  padding: 4em 0 9em;
+  position: relative;
+}
+
+.pricing-palden .pricing-deco-img {
   position: absolute;
   bottom: 0;
-  right: 0;
-  border-style: solid;
-  border-color: transparent transparent #283753;
-  border-width: 20px;
-}
-@media (max-width: 767px) {
-  
-  .price .card {
-  margin-bottom: 31px;
-  }
-  .shadowww {
-    font-size: 60px;
-    top: -100px;
-  }
-}
-.price .card-title {
-  font-size: 20px;
-  font-weight: 600;
-  color: #fff;
-  border-radius: 28px;
-  background-color: #3C527B;
-  padding: 13px 32px;
-  margin-bottom: 25px;
-}
-.amount {
-  font-size: 30px;
-    font-weight: 600;
-    color: #C1CEE5;
-    margin-bottom: 30px;
-}
-.small-text {
-  font-size: 14px;
+  left: 0;
+  width: 100%;
+  height: 160px;
 }
 
-.price .card ul {
-list-style: none;
-margin: 0;
-padding: 0;
-text-align: left;
+.pricing-palden .pricing-title {
+  font-size: 0.75em;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  color: #fff;
 }
 
-.price .card ul li {
-  padding: 20px;
-  border-top: 1px solid #eee;
+.pricing-palden .deco-layer {
+  transition: transform 0.5s;
 }
-.price .card-link {
-  margin-top: 30px;
-  font-size: 14px;
-  font-weight: 500;
+
+.pricing-palden .pricing-item:hover .deco-layer--1 {
+  transform: translate3d(15px, 0, 0);
+}
+
+.pricing-palden .pricing-item:hover .deco-layer--2 {
+  transform: translate3d(-15px, 0, 0);
+}
+
+.pricing-palden .icon {
+  font-size: 2.5em;
+}
+
+.pricing-palden .pricing-price {
+  font-size: 5em;
+  font-weight: bold;
+  padding: 0;
   color: #fff;
-  border-radius: 5px;
-  background-color: #3C527B;
-  padding: 12px 30px;
+  margin: 0 0 0.25em 0;
+  line-height: 0.75;
 }
-.price .card-link:hover,
-.price .card-link:focus {
- color: #fff;
- background-color: #25d366;
+
+.pricing-palden .pricing-currency {
+  font-size: 0.15em;
+  vertical-align: top;
 }
+
+.pricing-palden .pricing-period {
+  font-size: 0.15em;
+  padding: 0 0 0 0.5em;
+  font-style: italic;
+}
+
+.pricing-palden .pricing__sentence {
+  font-weight: bold;
+  margin: 0 0 1em 0;
+  padding: 0 0 0.5em;
+}
+
+.pricing-palden .pricing-feature-list {
+  margin: 0;
+  padding: 0.25em 0 2.5em;
+  list-style: none;
+  text-align: center;
+}
+
+.pricing-palden .pricing-feature {
+  padding: 1em 0;
+}
+
+.pricing-palden .pricing-action {
+  font-weight: bold;
+  margin: auto 3em 2em 3em;
+  padding: 1em 2em;
+  color: #fff;
+  border-radius: 30px;
+  background: linear-gradient(135deg, #4097f9, #0af0c7);;
+  transition: background-color 0.3s;
+}
+.pricing-palden .business {
+  background: linear-gradient(135deg,#a93bfe,#584efd)
+}
+
+.pricing-palden .pricing-action:hover,
+.pricing-palden .pricing-action:focus {
+  background: #33C4FF;
+}
+
+.pricing-palden .pricing-item--featured .pricing-deco {
+  padding: 5em 0 8.885em 0;
+}
+
+/* end Princing  */
+
+
+
+
+
 /* Start Subscribe */
 .subscribe {
     background-color: white;
+    background-image: url(../images/subscribe.jpg);
+    background-size: cover;
   }
   .subscribe input[type="text"] {
     border: none;
     border-bottom: 1px solid black;
-    color: black;
+    color: white;
+    background: none;
   }
   .subscribe input[type="text"]:focus {
     outline: none;
   }
   .subscribe ::placeholder {
-    color: black;
+    color: white;
   }
   .subscribe input[type="submit"] {
     background-color: rgb(13 202 240);
@@ -334,6 +412,13 @@ text-align: left;
   .subscribe input[type="submit"]:hover {
     background-color: white;
     color:rgb(13 202 240);
+  }
+
+  .subscribe .envelope {
+   position: absolute;
+   color: white;
+   top: 13px;
+   left: -11px;
   }
   
   /* End Subscribe */
@@ -388,6 +473,7 @@ text-align: left;
 }
 }
 /* End Footer */
+
 /* DEmo  */
 .bg-pink-200 {
   background-color: #f8d9e4; 
@@ -409,7 +495,7 @@ label {
 /* Start Testimonials */
 
 
- .box {
+.box {
   padding: 20px;
   background-color: white;
   box-shadow: 0 2px 4px rgb(0 0 0 / 7%);
@@ -417,7 +503,7 @@ label {
   position: relative;
 }
 
- .box .rate .filled {
+.box .rate .filled {
   color: #ffc107;
 }
 /* scrool to top  */
