--- a/css/smart.css
+++ b/css/smart.css
@@ -143,25 +143,10 @@ h4 {
   -ms-transform: translateY(-20px) translateX(-20px);
   -o-transform: translateY(-20px) translateX(-20px);
 }
-/* Interface  */
-.view {
-  background-color: #0a1c3a;
-}
 /* MultiPlatform  */
-.multi {
-  background-color: white;
-}
 
-.multi .main-title h2:hover {
-  background-color: #33C4FF ;
-  color: white;
-  cursor: pointer;
-}
-/* AVis  */
-.avis {
-  background-color: white;
-}
-.avis .main-title h2:hover {
+.multi .main-title h2:hover, 
+.avis .main-title h2:hover{
   background-color: #33C4FF ;
   color: white;
   cursor: pointer;
@@ -222,7 +207,49 @@ font-size: 45px;
   width: 100%;
   margin: 0 auto 3em;
 }
+.price .tabsBtnHolder ul{
+    float:left;
+    display:block;
+    width:100%;
+    max-width:326px;   
+    border-radius:1.6666666667rem;
+    margin:0px auto;
+    margin-bottom:40px; 
+    background:linear-gradient(135deg, #4097f9, #0af0c7);;
+    text-align:center;
+    position:relative;
+}
 
+.price .tabsBtnHolder ul li{
+    float: left;
+    width:calc(100% / 2);
+    transition:0.4s ease;
+    display: inline-block;
+}
+
+.price .tabsBtnHolder ul li p{
+    color:#fff;
+    padding:21px 15px;
+    z-index:10;
+    position:relative;
+    cursor:pointer;
+}
+
+.price .tabsBtnHolder ul li p.active{
+    color:#33edf3;
+}
+
+.price .tabsBtnHolder ul li.indicator{
+    position: absolute;
+    top: 50%;
+    left: 2px; /*163px*/
+    background: #fff;
+    height: calc(100% - 4px);
+    transform: translateY(-50%);
+    border-radius: 1.5333333333rem;
+    width: 161px;
+    z-index:9
+}
 .pricing-item {
   position: relative;
   display: flex;
